# src/dto/Pet.dto.js
@@ -2,7 +2,7 @@ export default class PetDTO {
     static getPetInputFrom = (pet) =>{
         return {
             name:pet.name||'',
-            specie:pet.species||'',
+            specie:pet.specie||'',
             image: pet.image||'',
             birthDate:pet.birthDate||'12-30-2000',
             adopted:false
